data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.Field1.md
---
title: "StructureVillagePieces.Field1"
description: "public static class StructureVillagePieces.Field1 extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.Field1.html"
sourceType: javadoc
---

# StructureVillagePieces.Field1

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Field1

## Class signature

```java
public static class StructureVillagePieces.Field1 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureVillagePieces.Field1 func_74900_a(StructureVillagePieces.Start p_74900_0_, java.util.List p_74900_1_, java.util.Random p_74900_2_, int p_74900_3_, int p_74900_4_, int p_74900_5_, int p_74900_6_, int p_74900_7_)`

## Fields

- `Field1`
- `Field1`
