data/forge_javadoc/1.8.9/raw/net/minecraft/world/gen/structure/StructureVillagePieces.Field1.md
---
title: "StructureVillagePieces.Field1"
description: "public static class StructureVillagePieces.Field1 extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/world/gen/structure/StructureVillagePieces.Field1.html"
sourceType: javadoc
---

# StructureVillagePieces.Field1

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Field1

## Class signature

```java
public static class StructureVillagePieces.Field1 extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.Field1 func_175851_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175851_1_, java.util.Random rand, int p_175851_3_, int p_175851_4_, int p_175851_5_, EnumFacing facing, int p_175851_7_)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to read subclass data from NBT
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to write subclass data to NBT

## Fields

- `Field1`
- `Field1`
